scripts/nullness/annotator/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8.txt
../annotator/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8/src/es/dagaren/gladiator/testing/representation/MovesGenerationTest.java:33: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8/src/es/dagaren/gladiator/testing/representation/MovesGenerationTest.java:52: error: cannot find symbol
   @Initializer private void initMoves(String fen)
    ^
  symbol:   class Initializer
  location: class MovesGenerationTest
Note: ../annotator/url354ce1a2d1_dagaren_gladiator_chess_tgz-pJ8-es_dagaren_gladiator_main_MainJ8/src/es/dagaren/gladiator/testing/time/ClockTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors
